// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateLabel renders children 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  font-weight: 600;
  line-height: 20px;
  color: #fff;
  font-size: 14px;
  text-align: center;
  background-color: #6a737d;
  border-radius: 3px;
}

<span
  className="emotion-0"
>
  hi
</span>
`;

exports[`StateLabel respects the icon prop 1`] = `
.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  font-weight: 600;
  line-height: 20px;
  color: #fff;
  font-size: 14px;
  text-align: center;
  background-color: #dbab09;
  border-radius: 3px;
}

.emotion-0 {
  margin-right: 4px;
}

<span
  className="emotion-1"
>
  <svg
    aria-hidden="true"
    className="emotion-0"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 12 16"
    width={12}
  >
    <path
      d="M12 5.5l-8 8-4-4L1.5 8 4 10.5 10.5 4 12 5.5z"
      fillRule="evenodd"
    />
  </svg>
</span>
`;

exports[`StateLabel respects the scheme prop 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  font-weight: 600;
  line-height: 20px;
  color: #fff;
  font-size: 14px;
  text-align: center;
  background-color: #2cbe4e;
  border-radius: 3px;
}

<span
  className="emotion-0"
/>
`;

exports[`StateLabel respects the scheme prop 2`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  font-weight: 600;
  line-height: 20px;
  color: #fff;
  font-size: 14px;
  text-align: center;
  background-color: #cb2431;
  border-radius: 3px;
}

<span
  className="emotion-0"
/>
`;

exports[`StateLabel respects the scheme prop 3`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  font-weight: 600;
  line-height: 20px;
  color: #fff;
  font-size: 14px;
  text-align: center;
  background-color: #6f42c1;
  border-radius: 3px;
}

<span
  className="emotion-0"
/>
`;

exports[`StateLabel respects the small flag 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.125em 4px;
  font-weight: 600;
  line-height: 20px;
  color: #fff;
  font-size: 12px;
  text-align: center;
  background-color: #6a737d;
  border-radius: 3px;
}

<span
  className="emotion-0"
/>
`;

exports[`StateLabel respects the small flag 2`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  font-weight: 600;
  line-height: 20px;
  color: #fff;
  font-size: 14px;
  text-align: center;
  background-color: #6a737d;
  border-radius: 3px;
}

<span
  className="emotion-0"
/>
`;
